# mypacer-club

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mypacer_club/: analyzer.py  main.py  reporter.py  scraper.py
tests/: conftest.py  test_analyzer.py  test_reporter.py  test_scraper.py
tests/fixtures/: sample_table.html
