[project]
name = "mypacer-club"
version = "0.1.0"
description = "Outil B2B d'automatisation des résultats pour les clubs d'athlétisme."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "resend>=2.21.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.4",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "ruff>=0.15.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true  # Pour éviter les erreurs sur 'resend' ou 'lxml' qui n'ont pas forcément de types
warn_return_any = true
warn_unused_configs = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
